prevented footer from overlapping content and removed <a> bg color changes on hover for visibility reasons

--- a/src/Components/Searchbar/SearchBar.css
+++ b/src/Components/Searchbar/SearchBar.css
@@ -81,14 +81,6 @@ input:focus {
   align-items: center;
 }
 
-a {
-  text-decoration: none;
-}
-
-a:hover {
-  background-color: lightgray;
-}
-
 .clearBtn {
   cursor: pointer;
 }
